--- a/project/byton.html
+++ b/project/byton.html
@@ -59,13 +59,9 @@
 </p>
 
 <div class="grid1">
+  <img src="/img/byton/poster3-4.jpg" alt="Byton by Nora Zhao">
   <img src="/img/byton/poster1m.jpg" alt="Byton by Nora Zhao">
   <img src="/img/byton/poster2m.jpg" alt="Byton by Nora Zhao">
-</div>
-
-<div class="grid2">
-  <img src="/img/byton/poster3.jpg" alt="Byton by Nora Zhao">
-  <img src="/img/byton/poster4.jpg" alt="Byton by Nora Zhao">
 </div>
 
 <div class="grid1">
