--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -37,7 +37,7 @@
   Using Robert Plutchik’s diagram (1980), this booklet aims to explore the link between meaning and typography, especially those which are linked to human emotions by highlighting the enclosed space in written words.
 </p>
 <p class="zh indent bodyText">
-  这本小册子使用了罗伯特·普鲁奇克（ROBERT PLUTCHIK）的图表（1980），旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
+  这本小册子使用了罗伯特·普鲁奇克（Robert Plutchik）的图表（1980），旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
 <div class="grid2 gridxto1">
   <img src="/img/emotional-words/1.jpg" alt="Emotional Words by Nora Zhao">
   <img src="/img/emotional-words/2.jpg" alt="Emotional Words by Nora Zhao">
@@ -82,7 +82,7 @@
 <p class="zh indent bodyText">
   该手册旨在演示图案制作技术如何用于生成字体设计及其可识别性的问题。
   <br>
-  字母“E”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“E”的字体。
+  字母“e”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“e”的字体。
 </p>
 
 <div class="grid3 gridxto1">
