--- a/project/byton.html
+++ b/project/byton.html
@@ -55,7 +55,7 @@
   <br class="dividerLine">
   电动汽车品牌拜腾于2017年由前宝马和日产汽车高管共同创立。其愿景不仅限于汽车的基本运动性能，还在于创造能够无缝连接用户数字生活的智能设备，使他们能够更好地享受旅途中的时间。
   <br>
-  在推出首款汽车M-BYTE SUV之前，他们希望升级其视觉识别系统以更好地表达愿景。这涉及对其所有现有接触点的全面审核，并对关键图形、调性、排版布局原则和摄影风格进行重塑。
+  在推出首款汽车M-Byte SUV之前，他们希望升级其视觉识别系统以更好地表达愿景。这涉及对其所有现有接触点的全面审核，并对关键图形、调性、排版布局原则和摄影风格进行重塑。
 </p>
 
 <div class="grid1">
