--- a/project/chinese-grid.html
+++ b/project/chinese-grid.html
@@ -53,7 +53,7 @@
   <br class="listBreak">
   时间：2018年
   <br class="dividerLine">
-  产出一套中文字体的传统方法往往是由设计师根据基本笔画一笔一划地手动拼写和调整每个文字。因为汉字字符数目巨大，这个过程通常要重复成千上万次。通过建立一个几何化的体系，本项目旨在探索和挑战传统的字体设计方法。
+  通常而言，产出一套中文字体的往往需要由设计师根据基本部件笔划进行对每个文字的手动拼写和调整。由于汉字字符数目巨大，这个过程通常要重复成千上万次，消耗巨大的人力成本。通过建立一个几何化的体系，本项目旨在探索和挑战传统的字体设计方法。
 </p>
 
 <img src="/img/chinese-grid/grid.png" alt="Chinese Grid by Nora Zhao">
