--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -47,7 +47,7 @@
   <br class="listBreak">
   时间：2018年
   <br class="dividerLine">
-  该书的内容取材于设计师（DAVID BENNETT，REBACCA MAY，PETER CHADWICK & KATE MCLEAN）。他们的作品来自专业领域或学术领域。
+  该书的内容取材于设计师（David Bennett、Rebecca May、Peter Chadwick、Kate McLean）。他们的作品来自专业领域或学术领域。
 </p>
 
 <div class="grid1">
