--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -46,7 +46,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
-  本书由CARLOS ROMO-MELGAR撰写，论文探讨了思辨设计在建筑出版的扩展领域中的应用。
+  本书由Carlos Romo-Melgar撰写，论文探讨了思辨设计在建筑出版的扩展领域中的应用。
 </p>
 
 <div class="grid1">
