--- a/project/glitch-pattern.html
+++ b/project/glitch-pattern.html
@@ -49,11 +49,11 @@
   <br class="listBreak">
   范畴：生成艺术、故障艺术
   <br class="listBreak">
-  编程语言与函数库：HTML、CSS、JAVASCRIPT、THREE.JS
+  编程语言与函数库：HTML、CSS、JavaScript、Three.js
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
-  深度冲突（Z-FIGHTING）是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
+  深度冲突（z-fighting）是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
 </p>
 
 <div class="grid1">
