--- a/project/glitch-room.html
+++ b/project/glitch-room.html
@@ -55,7 +55,7 @@
   <br class="listBreak">
   范畴：生成艺术、故障艺术、虚拟现实
   <br class="listBreak">
-  编程语言与函数库：HTML、CSS、JAVASCRIPT、A-FRAME
+  编程语言与函数库：HTML、CSS、JavaScript、A-Frame
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
@@ -63,7 +63,7 @@
   <br>
   该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
   <br>
-  网站链接：<a href="https://glitchroom.com" target="_blank">GLITCHROOM.COM</a>
+  网站链接：<a href="https://glitchroom.com" target="_blank">glitchroom.com</a>
 </p>
 
 <div class="grid1">
