--- a/project/omdia.html
+++ b/project/omdia.html
@@ -43,7 +43,7 @@
 </p>
 
 <p class="zh indent bodyText">
-  客户：OMDIA（INFORMA集团）
+  客户：Omdia（Informa集团）
   <br class="listBreak">
   地点：英国伦敦
   <br class="listBreak">
@@ -51,7 +51,7 @@
   <br class="listBreak">
   时间：2019-2020年
   <br class="dividerLine">
-  OMDIA由INFORMA TECH旗下的市场分析公司OVUM、HEAVY READING、TRACTICA与收购的IHS MARKIT合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。具备这样的研究广度和深度，通过“连接关键点”，OMDIA能够有效地为整个科技生态圈的客户提供全方位研究和分析服务。
+  Omdia由Informa Tech旗下的市场分析公司Ovum、Heavy Reading、TracticaA与收购的IHS Markit合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。具备这样的研究广度和深度，通过“连接关键点”，Omdia能够有效地为整个科技生态圈的客户提供全方位研究和分析服务。
 </p>
 
 <div class="grid1">
