--- a/project/visual-weather.html
+++ b/project/visual-weather.html
@@ -53,7 +53,7 @@
   <br class="listBreak">
   范畴：生成艺术、故障艺术、数据可视化
   <br class="listBreak">
-  编程语言与函数库：HTML、CSS、JAVASCRIPT、THREE.JS
+  编程语言与函数库：HTML、CSS、JavaScript、Three.js
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
