--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -21,7 +21,7 @@
   For comission or collaboration, please don't hesitate to contact me.
 </p>
 <p class="zh indent headerText">
-  如果您有项目或合作需求，可通过微信 (NORAZHAODESIGN) 或电话联系我。
+  如果您有项目或合作需求，可通过微信 (norazhaodesign) 或电话联系我。
 </p>
 
 <h1 class="en">About and Contact</h1>
@@ -48,9 +48,9 @@
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
-  联系电话：(+86) 13260071686 · 微信号：NORAZHAODESIGN
+  联系电话：(+86) 13260071686 · 微信号：norazhaodesign
   <br style="margin-bottom: 0;">
-  电子邮箱：NORAZHAODESIGN@GMAIL.COM
+  电子邮箱：norazhaodesign@gmail.com
 </p>
 
 <div class="pageDivider"></div>
