--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -26,7 +26,10 @@
 
 <h1 class="en">About and Contact</h1>
 <h1 class="zh">简介及联系方式</h1>
-<img src="/img/about/me.jpg" alt="Nora Zhao">
+
+<div class="grid1">
+  <img src="/img/about/me.jpg" alt="Nora Zhao">
+</div>
 </main>
 
 <p class="en indent bodyText">
