--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -27,7 +27,9 @@
 <h1 class="en">Books and Booklets</h1>
 <h1 class="zh">书籍与小册子</h1>
 
-<img src="/img/machine-translation/0.jpg" alt="Machine Translation by Nora Zhao">
+<div class="grid1">
+  <img src="/img/machine-translation/0.jpg" alt="Machine Translation by Nora Zhao">
+</div>
 </main>
 
 <h2 class="en indent">Emotional Words</h2>
