--- a/project/byton.html
+++ b/project/byton.html
@@ -27,7 +27,9 @@
 <h1 class="en">Byton</h1>
 <h1 class="zh">拜腾</h1>
 
-<img src="/img/byton/teaser.jpg" alt="Byton by Nora Zhao">
+<div class="grid1">
+  <img src="/img/byton/teaser.jpg" alt="Byton by Nora Zhao">
+</div>
 </main>
 
 <p class="en indent bodyText">
