--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -27,7 +27,9 @@
 <h1 class="en">Design Practice</h1>
 <h1 class="zh">设计实践</h1>
 
-<img src="/img/design-practice/8.jpg" alt="Design Practice by Nora Zhao">
+<div class="grid1">
+  <img src="/img/design-practice/8.jpg" alt="Design Practice by Nora Zhao">
+</div>
 </main>
 
 <p class="en indent bodyText">
@@ -47,7 +49,7 @@
   <br class="listBreak">
   时间：2018年
   <br class="dividerLine">
-  该书的内容取材于设计师（David Bennett、Rebecca May、Peter Chadwick、Kate McLean）。他们的作品来自专业领域或学术领域。
+  该书的内容取材于四位设计师（David Bennett、Rebecca May、Peter Chadwick、Kate McLean）的演讲分享。他们的作品来自专业领域或学术领域。
 </p>
 
 <div class="grid1">
