--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -27,7 +27,9 @@
 <h1 class="en">EF-AP</h1>
 <h1 class="zh">EF-AP</h1>
 
-<img src="/img/efap/1.jpg" alt="EFAP by Nora Zhao">
+<div class="grid1">
+  <img src="/img/efap/1.jpg" alt="EFAP by Nora Zhao">
+</div>
 </main>
 
 <p class="en indent bodyText">
