--- a/project/glitch-pattern.html
+++ b/project/glitch-pattern.html
@@ -27,7 +27,9 @@
 <h1 class="en">Glitch Pattern</h1>
 <h1 class="zh">故障图纹</h1>
 
-<img src="/img/glitch-pattern/1p.jpg" alt="Glitch Pattern by Nora Zhao">
+<div class="grid1">
+  <img src="/img/glitch-pattern/1p.jpg" alt="Glitch Pattern by Nora Zhao">
+</div>
 </main>
 
 <p class="en indent bodyText">
