--- a/project/glitch-room.html
+++ b/project/glitch-room.html
@@ -26,8 +26,10 @@
 
 <h1 class="en">Glitch Room</h1>
 <h1 class="zh">故障房间</h1>
-<img src="/img/glitch-room/bp4.jpg" alt="Glitch Room by Nora Zhao">
 
+<div class="grid1">
+  <img src="/img/glitch-room/bp4.jpg" alt="Glitch Room by Nora Zhao">
+</div>
 <h6 class="en imgDescription">△ Screenshot of a model customisation page.</h6>
 <h6 class="zh imgDescription">△ 模型自定义页面截图。</h6>
 </main>
