--- a/project/omdia.html
+++ b/project/omdia.html
@@ -27,7 +27,9 @@
 <h1 class="en">Omdia</h1>
 <h1 class="zh">Omdia</h1>
 
-<img src="/img/omdia/logo-tech.png" alt="Omdia by Nora Zhao">
+<div class="grid1">
+  <img src="/img/omdia/logo-tech.png" alt="Omdia by Nora Zhao">
+</div>
 </main>
 
 <p class="en indent bodyText">
