--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -27,7 +27,9 @@
 <h1 class="en">Peacebird</h1>
 <h1 class="zh">太平鸟</h1>
 
-<img src="/img/peacebird/logo.jpg" alt="Peacebird by Nora Zhao">
+<div class="grid1">
+  <img src="/img/peacebird/logo.jpg" alt="Peacebird by Nora Zhao">
+</div>
 </main>
 
 <p class="en indent bodyText">
