--- a/project/rtw.html
+++ b/project/rtw.html
@@ -27,11 +27,13 @@
 <h1 class="en">RTW</h1>
 <h1 class="zh">RTW</h1>
 
-<video autoplay loop
-  src="/img/rtw/video.mov"
-  style="width: 100%;">
-  Your browser does not support the video tag.
-</video>
+<div class="grid1">
+  <video autoplay loop
+    src="/img/rtw/video.mov"
+    style="width: 100%;">
+    Your browser does not support the video tag.
+  </video>
+</div>
 </main>
 
 <p class="en indent bodyText">
