--- a/project/chinese-grid.html
+++ b/project/chinese-grid.html
@@ -66,17 +66,18 @@
 <h6 class="en imgDescription">△ Posters which exhibit the design of the grid system by having the square and circular grids overlapped.</h6>
 <h6 class="zh imgDescription">△ 海报通过重叠方形和圆形网格以展示网格系统设计。</h6>
 
-<div class="grid2">
-  <img src="/img/chinese-grid/2-7.jpg" alt="Chinese Grid by Nora Zhao">
-  <img src="/img/chinese-grid/2-8.jpg" alt="Chinese Grid by Nora Zhao">
-  <img src="/img/chinese-grid/2-9.jpg" alt="Chinese Grid by Nora Zhao">
-  <img src="/img/chinese-grid/2-10.jpg" alt="Chinese Grid by Nora Zhao">
-</div>
 <div class="grid1">
   <img src="/img/chinese-grid/3-2.jpg" alt="Chinese Grid by Nora Zhao">
 </div>
 <h6 class="en imgDescription">△ Application of the grid system on a piece of text (excerpt from "Short Song Style" by Cao Cao).</h6>
 <h6 class="zh imgDescription">△ 该网格系统在一段诗文上的应用（节选自曹操的《短歌行》）。</h6>
+
+<div class="grid2 gridxto1">
+  <img src="/img/chinese-grid/2-7.jpg" alt="Chinese Grid by Nora Zhao">
+  <img src="/img/chinese-grid/2-8.jpg" alt="Chinese Grid by Nora Zhao">
+  <img src="/img/chinese-grid/2-9.jpg" alt="Chinese Grid by Nora Zhao">
+  <img src="/img/chinese-grid/2-10.jpg" alt="Chinese Grid by Nora Zhao">
+</div>
 
 <div class="pageDivider"></div>
 
