--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -21,19 +21,19 @@
   For comission or collaboration, please don't hesitate to contact me.
 </p>
 <p class="zh indent headerText">
-  如果您有项目或合作需求，可通过微信 (norazhaodesign) 或电话联系我。
+  如果您在寻找设计师，或有项目合作需求，可通过微信或电子邮箱联系我。
 </p>
 
 <h1 class="en">About and Contact</h1>
 <h1 class="zh">简介及联系方式</h1>
 
 <div class="grid1">
-  <img src="/img/about/me.jpg" alt="Nora Zhao">
+  <img src="/img/about/me.jpg" title=“image tooltip” alt="About & Contact, Nora Zhao, Artist & Graphic Designer, 赵子娴, 艺术家 平面设计师">
 </div>
 </main>
 
 <p class="en indent bodyText">
-  I'm Nora, an artist and graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+  I'm Nora, an artist and graphic designer. This website shows a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
   <br>
   I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   <br>
@@ -47,11 +47,13 @@
 </p>
 
 <p class="zh indent bodyText">
-  我叫赵子娴，是一名来自中国的艺术家和平面设计师。本网站选取并展示了我过去完成的一些设计项目。我所探索和实践的领域包括生成式艺术、品牌识别以及传统的平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。
+  我是赵子娴（Nora），是一名艺术家和平面设计师。网站选取并展示了我过去完成的部分设计项目。我主要进行探索和实践的领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design），其中我个人对用创意编程的方法生成批量式随机图形很感兴趣。
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
-  联系电话：(+86) 13260071686 · 微信号：norazhaodesign
+  我目前可以接手远程的艺术与设计项目，如您需要雇佣自由职业设计师或有项目合作需求，抑或是感兴趣想要聊聊天，请通过微信或电子邮箱联系我。
+  <br>
+  微信账号：norazhaodesign
   <br style="margin-bottom: 0;">
   电子邮箱：norazhaodesign@gmail.com
 </p>
