--- a/navigation.html
+++ b/navigation.html
@@ -212,7 +212,7 @@
     <p class="zh"><a href="/project/posters.html">- 海报</a></p>
 
     <p class="en"><a href="/project/books-and-booklets.html">- Books and Booklets</a></p>
-    <p class="zh"><a href="/project/books-and-booklets.html">- 书籍与小册子</a></p>
+    <p class="zh"><a href="/project/books-and-booklets.html">- 书籍和小册子</a></p>
   </nav>
 </div>
 <style>
