--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Books and Booklets 书籍与小册子</title>
+<title>Books and Booklets 书籍和小册子</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -25,7 +25,7 @@
 </p>
 
 <h1 class="en">Books and Booklets</h1>
-<h1 class="zh">书籍与小册子</h1>
+<h1 class="zh">书籍和小册子</h1>
 
 <div class="grid1">
   <img src="/img/machine-translation/0.jpg" alt="Machine Translation by Nora Zhao">
