--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>NORA ZHAO · ARTIST & DESIGNER | 赵子娴 · 艺术家&设计师</title>
+<title>NORA ZHAO 赵子娴 · ARTIST & DESIGNER 艺术家 & 设计师</title>
 
 <meta name="description"
       content="Artist and designer practicing across the areas of generative art, brand identity and graphic design.">
