--- a/navigation.html
+++ b/navigation.html
@@ -180,7 +180,7 @@
     <p class="zh"><a href="/project/rtw.html">- RTW</a></p>
 
     <p class="en"><a href="/project/omdia.html">- Omdia</a></p>
-    <p class="zh"><a href="/project/omdia.html">- OMDIA</a></p>
+    <p class="zh"><a href="/project/omdia.html">- Omdia</a></p>
 
     <p class="en"><a href="/project/peacebird.html">- Peacebird</a></p>
     <p class="zh"><a href="/project/peacebird.html">- 太平鸟</a></p>
