--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Design Practice 设计实践</title>
+<title>DESIGN PRACTICE 设计实践 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
