--- a/project/glitch-room.html
+++ b/project/glitch-room.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Glitch Room 故障房间</title>
+<title>GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -28,7 +28,7 @@
 <h1 class="zh">故障房间</h1>
 
 <div class="grid1">
-  <img src="/img/glitch-room/bp4.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="/img/glitch-room/cover.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
 </div>
 <h6 class="en imgDescription">△ Screenshot of a model customisation page.</h6>
 <h6 class="zh imgDescription">△ 模型自定义页面截图。</h6>
@@ -69,27 +69,29 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/glitch-room/bp5.jpg" alt="Glitch Room by Nora Zhao">
-  <img src="/img/glitch-room/bp6.jpg" alt="Glitch Room by Nora Zhao">
-  <img src="/img/glitch-room/bp7.jpg" alt="Glitch Room by Nora Zhao">
-  <img src="/img/glitch-room/bp8.jpg" alt="Glitch Room by Nora Zhao">
-  <img src="/img/glitch-room/bp9.jpg" alt="Glitch Room by Nora Zhao">
-  <img src="/img/glitch-room/bp11.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="/img/glitch-room/1.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/2.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/3.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/4.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/5.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/6.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/7.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+
 </div>
 
 <h6 class="en imgDescription">△ Screenshots of 3D models in VR view.</h6>
 <h6 class="zh imgDescription">△ 三维模型在虚拟现实空间中的截图。</h6>
 
 <div class="grid1">
-  <img src="/img/glitch-room/show3.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="/img/glitch-room/show1.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="flex flexto1">
-  <div style="flex: calc(3086/2018);">
-    <img src="/img/glitch-room/show2.jpg" alt="Glitch Room by Nora Zhao">
+  <div style="flex: calc(2890/1810);">
+    <img src="/img/glitch-room/show2.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
   </div>
-  <div style="flex: calc(3455/2183);">
-    <img src="/img/glitch-room/show1.jpg" alt="Glitch Room by Nora Zhao">
+  <div style="flex: calc(3000/1960);">
+    <img src="/img/glitch-room/show3.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
   </div>
 </div>
 
