--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About & Contact 简介及联系方式</title>
+<title>ABOUT & CONTACT 简介及联系方式 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -47,7 +47,7 @@
 </p>
 
 <p class="zh indent bodyText">
-  我是赵子娴（Nora），是一名艺术家和平面设计师。网站选取并展示了我过去完成的部分设计项目。我主要进行探索和实践的领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design），其中我个人对用创意编程的方法生成批量式随机图形很感兴趣。
+  我是赵子娴（Nora），一名艺术家和平面设计师。网站选取并展示了我过去完成的一些设计项目。我主要进行探索和实践的领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design），其中我个人对用创意编程的方法生成批量式随机图形很感兴趣。
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
