--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>EF-AP</title>
+<title>EF-AP · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
