--- a/project/glitch-pattern.html
+++ b/project/glitch-pattern.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Glitch Pattern 故障图纹</title>
+<title>GLITCH PATTERN 故障图纹 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
