--- a/project/mini-sites.html
+++ b/project/mini-sites.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mini-Sites 迷你站点</title>
+<title>MINI-SITES 迷你站点 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
