--- a/project/byton.html
+++ b/project/byton.html
@@ -37,7 +37,7 @@
   <br class="listBreak">
   Location: Nanjing, China
   <br class="listBreak">
-  Scope: Visual Identity System, Packaging, Brand Guidelines
+  Scope: Visual Identity System, Brand Guidelines
   <br class="listBreak">
   Year: 2019
   <br class="dividerLine">
@@ -51,13 +51,13 @@
   <br class="listBreak">
   地点：中国南京
   <br class="listBreak">
-  范畴：视觉识别系统、包装、品牌指导手册
+  范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
-  电动汽车品牌拜腾于2017年由前宝马和日产汽车高管共同创立。其愿景不仅限于汽车的基本运动性能，还在于创造能够无缝连接用户数字生活的智能设备，使他们能够更好地享受旅途中的时间。
+  电动汽车品牌拜腾于2017年由前宝马和日产汽车高管共同创立。其愿景并非仅局限于汽车的基本运动性能方面，还在于创造能够无缝联结用户数字生活的智能设备，使人能够更好地享受旅途中的时光。
   <br>
-  在推出首款汽车M-Byte SUV之前，他们希望升级其视觉识别系统以更好地表达愿景。这涉及对其所有现有接触点的全面审核，并对关键图形、调性、排版布局原则和摄影风格进行重塑。
+  在正式推出首款汽车M-Byte SUV之前，拜腾希望对其现有的视觉识别系统进行升级以更好地表达其愿景，并使其更加趋向年轻化的市场和人群。这涉及对现有接触点的全面审核，以及对关键图形、调性、排版布局原则和摄影风格的重塑。
 </p>
 
 <div class="grid1">
