--- a/project/rtw.html
+++ b/project/rtw.html
@@ -63,19 +63,17 @@
 </p>
 
 <div class="grid2 gridxto1">
-  <img src="/img/rtw/tmall1.jpg" alt="RTW · NORA ZHAO 赵子娴">
-  <img src="/img/rtw/tmall2.jpg" alt="RTW · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/tmall1.jpg" alt="RTW MOBILE TMALL DESIGN RTW天猫界面设计 · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/tmall2.jpg" alt="RTW MOBILE TMALL DESIGN RTW天猫界面设计 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="grid1">
-  <img src="/img/rtw/tag.jpg" alt="RTW · NORA ZHAO 赵子娴">
-</div>
+  <img src="/img/rtw/poster.jpg" alt="RTW POSTERS RTW海报 · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/card.jpg" alt="RTW BUSINESS CARDS RTW名片· NORA ZHAO 赵子娴">
 
-<div class="grid1">
-  <img src="/img/rtw/bag.jpg" alt="RTW · NORA ZHAO 赵子娴">
-  <img src="/img/rtw/shop-bag.jpg" alt="RTW · NORA ZHAO 赵子娴">
-  <img src="/img/rtw/poster.jpg" alt="RTW · NORA ZHAO 赵子娴">
-  <img src="/img/rtw/card.jpg" alt="RTW · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/tag.jpg" alt="RTW TAG RTW标签 · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/bag.jpg" alt="RTW POSTAL BAG RTW快递袋 · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/shop-bag.jpg" alt="RTW SHOPPING BAG RTW店内购物袋 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
