--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -52,7 +52,7 @@
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
-  在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
+  在维持衬线字体及其独特视觉特征的前提下，最大限度地简化太平鸟的企业标识，使其能在各种尺寸的电子设备屏幕上清晰显示。
 </p>
 
 <div class="grid1">
