--- a/project/rtw.html
+++ b/project/rtw.html
@@ -21,7 +21,7 @@
   Brand identity for an apparel company that provides quality products with a reasonable price.
 </p>
 <p class="zh indent headerText">
-  为一家以提供实惠价格的优等品质服饰为宗旨的品牌设计视觉识别系统。
+  为一家以提供大众可负担价位的高品质服装产品为宗旨的品牌设计视觉识别系统。
 </p>
 
 <h1 class="en">RTW</h1>
@@ -59,18 +59,13 @@
   <br class="listBreak">
   时间：2019-2020年
   <br class="dividerLine">
-  RTW这个服装品牌致力于以诚实、大众可负担的价格提供高品质的产品。丰富的不同颜色组合为品牌表达增添了差异性和活力，且可应用于各类品牌表达中。
+  RTW这个服装品牌致力于以诚实、大众可负担的价格提供高品质的产品。鲜艳且丰富的色彩为品牌表达增添了差异性与活力，且可应用于各种类型的品牌表达中。
 </p>
 
-<div class="grid2 gridxto1">
-  <img src="/img/rtw/tmall1.jpg" alt="RTW MOBILE TMALL DESIGN RTW天猫界面设计 · NORA ZHAO 赵子娴">
-  <img src="/img/rtw/tmall2.jpg" alt="RTW MOBILE TMALL DESIGN RTW天猫界面设计 · NORA ZHAO 赵子娴">
-</div>
-
 <div class="grid1">
+  <img src="/img/rtw/tmall.jpg" alt="RTW MOBILE TMALL DESIGN RTW天猫界面设计 · NORA ZHAO 赵子娴">
   <img src="/img/rtw/poster.jpg" alt="RTW POSTERS RTW海报 · NORA ZHAO 赵子娴">
   <img src="/img/rtw/card.jpg" alt="RTW BUSINESS CARDS RTW名片· NORA ZHAO 赵子娴">
-
   <img src="/img/rtw/tag.jpg" alt="RTW TAG RTW标签 · NORA ZHAO 赵子娴">
   <img src="/img/rtw/bag.jpg" alt="RTW POSTAL BAG RTW快递袋 · NORA ZHAO 赵子娴">
   <img src="/img/rtw/shop-bag.jpg" alt="RTW SHOPPING BAG RTW店内购物袋 · NORA ZHAO 赵子娴">
