--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -28,7 +28,7 @@
 <h1 class="zh">简介及联系方式</h1>
 
 <div class="grid1">
-  <img src="/img/about/me.jpg" title=“image tooltip” alt="About & Contact, Nora Zhao, Artist & Graphic Designer, 赵子娴, 艺术家 平面设计师">
+  <img src="/img/about/me.jpg" alt="About & Contact, Nora Zhao, Artist & Graphic Designer, 赵子娴, 艺术家 平面设计师">
 </div>
 </main>
 
