--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="Nora Zhao, 赵子娴, Portfolio, 作品集, Artist, 艺术家, Designer, 设计师, Graphic Designer, 平面设计师, Generative Art, 生成艺术, VI, Brand Identity, 品牌识别, Branding, 品牌">
 <meta name="author" content="Nora Zhao, 赵子娴">
 
-<link async rel="stylesheet" type="text/css" href="/style.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
 
