--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>NORA ZHAO 赵子娴 · ARTIST & DESIGNER 艺术家 & 设计师</title>
 
 <meta name="description"
-      content="Nora Zhao is an artist & designer practicing across the areas of generative art, brand identity and graphic design. 赵子娴是在生成艺术、品牌识别和平面设计等领域进行探索与实践的新媒体艺术家、设计师。">
+      content="Nora Zhao is an artist and designer practicing across the areas of generative art, brand identity and graphic design. 赵子娴是一名在生成艺术、品牌识别和平面设计等领域进行探索与实践的新媒体艺术家、设计师。">
 <meta name="robots" content="index, follow">
 <meta name="keywords" content="Nora Zhao, 赵子娴, Portfolio, 作品集, Artist, 艺术家, Designer, 设计师, Graphic Designer, 平面设计师, Generative Art, 生成艺术, VI, Brand Identity, 品牌识别, Branding, 品牌">
 <meta name="author" content="Nora Zhao, 赵子娴">
@@ -27,7 +27,7 @@
 <div class="row-container">
   <div class="firstRow" id="firstRow">
     <p class="en indent headerText">
-      Artist & designer practicing across the areas of generative art, brand identity and graphic design. Refresh for new visuals.
+      Artist and designer, practicing across the areas of generative art, brand identity and graphic design. Refresh for new visuals.
     </p>
     <p class="zh indent headerText">
       实践于生成艺术、品牌识别和平面设计等领域的新媒体艺术家&设计师。刷新本页面以获取新视效。
