--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -73,6 +73,30 @@
   <img src="/img/machine-translation/11.jpg" alt="Machine Translation by Nora Zhao">
 </div>
 
+<h2 class="en indent">Machine Translation</h2>
+<h2 class="zh indent">机器翻译</h2>
+
+<p class="en indent bodyText">
+  Digital brochure design for a digital transformation company (Ascent) as part of their brand identity.
+  <br>
+  By connecting data, software and purpose, Ascent helps brand leaders across a broad range of industries build new capabilities and unlock value: from smart home devices, space exploration and beer to manufacturing, finance, ecology and logistics.</p>
+<p class="zh indent bodyText">
+  这是为一家数字化转型公司（Ascent）设计的电子宣传册，作为其品牌识别的一部分。
+  <br>
+  Ascent的团队专门从事软件产品开发、数据工程、商业智能、高级分析、数据科学和IoT（物联网）解决方案，通过联结数据、软件和目标，帮助包括智能家居设备、太空探索、制造业、金融、生态和物流在内的各行各业品牌领导者建立新功能并释放价值。
+</p>
+
+<div class="grid2 gridxto1">
+  <img src="/img/ascent/1.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/2.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/3.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/4.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/5.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/6.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/7.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/8.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+</div>
+
 <h2 class="en indent">The Letter Evolution</h2>
 <h2 class="zh indent">字母演化论</h2>
 
