--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -49,39 +49,15 @@
   <img src="/img/emotional-words/6.jpg" alt="Emotional Words by Nora Zhao">
 </div>
 
-<h2 class="en indent">Machine Translation</h2>
-<h2 class="zh indent">机器翻译</h2>
-
-<p class="en indent bodyText">
-  This booklet aims to visualise the influence of machine translation by comparing a sample text and its translation iteration side by side with information highlighted.
-</p>
-<p class="zh indent bodyText">
-  本手册旨在通过将示例文本及其迭代的机器翻译进行横向比较，用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
-</p>
-
-<div class="grid2 gridxto1">
-  <img src="/img/machine-translation/1.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/2.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/3.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/4.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/5.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/6.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/7.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/8.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/9.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/10.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/11.jpg" alt="Machine Translation by Nora Zhao">
-</div>
-
-<h2 class="en indent">Machine Translation</h2>
-<h2 class="zh indent">机器翻译</h2>
+<h2 class="en indent">Ascent</h2>
+<h2 class="zh indent">Ascent</h2>
 
 <p class="en indent bodyText">
   Digital brochure design for a digital transformation company (Ascent) as part of their brand identity.
   <br>
   By connecting data, software and purpose, Ascent helps brand leaders across a broad range of industries build new capabilities and unlock value: from smart home devices, space exploration and beer to manufacturing, finance, ecology and logistics.</p>
 <p class="zh indent bodyText">
-  这是为一家数字化转型公司（Ascent）设计的电子宣传册，作为其品牌识别的一部分。
+  这是为一家数字化转型公司（Ascent）设计的电子刊物，作为其品牌识别的一部分。
   <br>
   Ascent的团队专门从事软件产品开发、数据工程、商业智能、高级分析、数据科学和IoT（物联网）解决方案，通过联结数据、软件和目标，帮助包括智能家居设备、太空探索、制造业、金融、生态和物流在内的各行各业品牌领导者建立新功能并释放价值。
 </p>
@@ -95,6 +71,23 @@
   <img src="/img/ascent/6.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
   <img src="/img/ascent/7.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
   <img src="/img/ascent/8.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+</div>
+
+<h2 class="en indent">Machine Translation</h2>
+<h2 class="zh indent">机器翻译</h2>
+
+<p class="en indent bodyText">
+  This booklet aims to visualise the influence of machine translation by comparing a sample text and its translation iteration side by side with information highlighted.
+</p>
+<p class="zh indent bodyText">
+  本手册旨在通过将示例文本及其迭代的机器翻译进行横向比较，用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
+</p>
+
+<div class="grid1">
+  <img src="/img/machine-translation/1.jpg" alt="Machine Translation by Nora Zhao">
+  <img src="/img/machine-translation/2.jpg" alt="Machine Translation by Nora Zhao">
+  <img src="/img/machine-translation/3.jpg" alt="Machine Translation by Nora Zhao">
+  <img src="/img/machine-translation/4.jpg" alt="Machine Translation by Nora Zhao">
 </div>
 
 <h2 class="en indent">The Letter Evolution</h2>
@@ -111,22 +104,12 @@
   字母“e”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“e”的字体。
 </p>
 
-<div class="grid3 gridxto1">
+<div class="grid1">
   <img src="/img/the-letter-evolution/1.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/2.jpg" alt="The Letter Evolution by Nora Zhao">
   <img src="/img/the-letter-evolution/3.jpg" alt="The Letter Evolution by Nora Zhao">
   <img src="/img/the-letter-evolution/4.jpg" alt="The Letter Evolution by Nora Zhao">
   <img src="/img/the-letter-evolution/5.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/6.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/7.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/8.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/9.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/10.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/11.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/12.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/13.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/14.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/15.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/17.jpg" alt="The Letter Evolution by Nora Zhao">
 </div>
 
 <div class="pageDivider"></div>
