--- a/navigation.html
+++ b/navigation.html
@@ -160,8 +160,8 @@
     <p class="zh"><a href="/about-and-contact.html">简介及联系方式</a></p>
     <br>
 
-    <p class="en type">Digital:</p>
-    <p class="zh type">数字：</p>
+    <p class="en type">Generative Art:</p>
+    <p class="zh type">生成艺术：</p>
 
     <p class="en"><a href="/project/glitch-room.html">- Glitch Room</a></p>
     <p class="zh"><a href="/project/glitch-room.html">- 故障房间</a></p>
@@ -174,7 +174,7 @@
     <br>
 
     <p class="en type">Brand Identity:</p>
-    <p class="zh type">品牌：</p>
+    <p class="zh type">品牌识别：</p>
 
     <p class="en"><a href="/project/rtw.html">- RTW</a></p>
     <p class="zh"><a href="/project/rtw.html">- RTW</a></p>
@@ -189,8 +189,8 @@
     <p class="zh"><a href="/project/byton.html">- 拜腾汽车</a></p>
     <br>
 
-    <p class="en type">Design:</p>
-    <p class="zh type">设计：</p>
+    <p class="en type">Graphic Design:</p>
+    <p class="zh type">平面设计：</p>
 
     <p class="en"><a href="/project/chinese-grid.html">- Chinese Grid</a></p>
     <p class="zh"><a href="/project/chinese-grid.html">- 中文字形网格</a></p>
@@ -202,8 +202,8 @@
     <p class="zh"><a href="/project/design-practice.html">- 设计实践</a></p>
     <br>
 
-    <p class="en type">Compilation:</p>
-    <p class="zh type">合辑：</p>
+    <p class="en type">Other:</p>
+    <p class="zh type">其他：</p>
 
     <p class="en"><a href="/project/mini-sites.html">- Mini-Sites</a></p>
     <p class="zh"><a href="/project/mini-sites.html">- 微型网页</a></p>
