--- a/project/mini-sites.html
+++ b/project/mini-sites.html
@@ -35,7 +35,7 @@
 <h2 class="en indent">Pattern Cards</h2>
 <h2 class="zh indent">图纹卡片</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/main/cards.html" target="_blank">here</a> to visit to the site in full screen.
+  Please click <a href="/page/main/cards.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
   请点击<a href="/page/main/cards.html" target="_blank">此处</a>以跳转到该网页。
@@ -47,7 +47,7 @@
 <h2 class="en indent">Cuts</h2>
 <h2 class="zh indent">Cuts</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/main/cuts.html" target="_blank">here</a> to visit to the site in full screen.
+  Please click <a href="/page/main/cuts.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
   请点击<a href="/page/main/cuts.html" target="_blank">此处</a>以跳转到该网页。
@@ -59,7 +59,7 @@
 <h2 class="en indent">Square Pixels</h2>
 <h2 class="zh indent">方形像素</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/main/square-pixels.html" target="_blank">here</a> to visit to the site in full screen.
+  Please click <a href="/page/main/square-pixels.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
   请点击<a href="/page/main/square-pixels.html" target="_blank">此处</a>以跳转到该网页。
