--- a/project/chinese-grid.html
+++ b/project/chinese-grid.html
@@ -41,7 +41,7 @@
   <br class="listBreak">
   Year: 2018
   <br class="dividerLine">
-  In terms of making a new Chinese font, traditionally, designers shall construct and adjust each character manually with pre-designed component strokes. Unlike English where there are only a small number of alphabets and symbols, the Chinese character making process is to be repeated for thousands of times due to its massive amount.
+  In terms of making a new Chinese font, traditionally, designers shall construct and adjust each character manually with pre-designed component strokes. Unlike English where there are only a small number of alphabets and symbols, the Chinese character making process is to be repeated thousands of times due to its massive amount.
   <br>
   This project aims at challenging the traditional method of Chinese type design with a systematic approach, where a "toolkit (base grid)" is provided instead for anyone to make the characters they need in the way they prefer.
 </p>
