--- a/project/omdia.html
+++ b/project/omdia.html
@@ -41,7 +41,9 @@
   <br class="listBreak">
   Year: 2019-2020
   <br class="dividerLine">
-  Established in 2019, Omdia is the new global technology research powerhouse which combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
+  Established in 2019, Omdia is the new global technology research powerhouse which combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media and telecommunications companies.
+  <br>
+  By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
 </p>
 
 <p class="zh indent bodyText">
@@ -59,6 +61,19 @@
 <div class="grid1">
   <img src="/img/omdia/guidelines.jpg" alt="OMDIA · NORA ZHAO 赵子娴">
 </div>
+
+<p class="en indent bodyText">
+  The visual identity was designed to break away from category norms and own the entire visual language of dots in a contemporary manner. A language directly born from the strategic positioning, a language that directly demonstrates Omdia’s truly integrated thinking and the ability to connect the dots across all aspects of technology data, insights and expertise.
+  <br>
+  The colour palette is purposely focused on black and white to emphasise Omdia’s authority and assertiveness, and supported with a vibrant secondary palette to provide flexibility to inform or inspire audiences, depending on the need or occasion.
+</p>
+
+<p class="zh indent bodyText">
+  视觉设计旨在脱离其所处的科技门类的常规思路，并以现代的方式占有以圆点为基础的视觉语言。这种视觉语言源于该品牌的战略定位，直接反映了Omdia的整合思维以及将技术数据、洞察力和专业知识各个方面联结起来的能力。
+  <br>
+  品牌标准色的基本色是黑与白，以此强调Omdia的权威和自信；充满活力的辅助色可根据需要或场合，提供灵活性和视觉张力。
+</p>
+
 
 <div class="grid1">
   <img src="/img/omdia/report1.jpg" alt="OMDIA · NORA ZHAO 赵子娴">
