--- a/project/rtw.html
+++ b/project/rtw.html
@@ -47,7 +47,7 @@
   <br class="dividerLine">
   RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
   <br>
-  Various colour combinations add differentiation and vibrance to the brand expression, and can be found in applications throughout.
+  Various colours add differentiation and vibrance to the brand expression, and can be found in applications throughout the system.
 </p>
 
 <p class="zh indent bodyText">
