--- a/project/visual-weather.html
+++ b/project/visual-weather.html
@@ -30,7 +30,7 @@
 <div class="iframeWrapper iframe60 iframexto110">
   <iframe src="/page/city.html"></iframe>
 </div>
-<h6 class="en imgDescription">△ Type in name of a city in English and click the search button to generate the visuals.</h6>
+<h6 class="en imgDescription">△ Type in name of a city in English and click the search button to generate its visuals.</h6>
 <h6 class="zh imgDescription">△ 用英文输入城市名称，然后单击“搜索”以获取视觉输出。</h6>
 </main>
 
