--- a/project/omdia.html
+++ b/project/omdia.html
@@ -28,7 +28,7 @@
 <h1 class="zh">Omdia</h1>
 
 <div class="grid1">
-  <img src="/img/omdia/logo-tech.png" alt="OMDIA · NORA ZHAO 赵子娴">
+  <img src="/img/omdia/cover.png" alt="OMDIA LOGO · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -59,27 +59,27 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/omdia/guidelines.jpg" alt="OMDIA · NORA ZHAO 赵子娴">
+  <img src="/img/omdia/guidelines.jpg" alt="OMDIA BRAND GUIDELINES · NORA ZHAO 赵子娴">
 </div>
 
 <p class="en indent bodyText">
-  The visual identity was designed to break away from category norms and own the entire visual language of dots in a contemporary manner. A language directly born from the strategic positioning, a language that directly demonstrates Omdia’s truly integrated thinking and the ability to connect the dots across all aspects of technology data, insights and expertise.
+  The visual identity was designed to break away from category norms and own the entire visual language of dots in a contemporary manner. Directly born from the strategic positioning, Omdia's visual identity demonstrates its integrated thinking and the ability to connect the dots across all aspects of technology data, insights and expertise.
   <br>
   The colour palette is purposely focused on black and white to emphasise Omdia’s authority and assertiveness, and supported with a vibrant secondary palette to provide flexibility to inform or inspire audiences, depending on the need or occasion.
 </p>
 
 <p class="zh indent bodyText">
-  视觉设计旨在脱离其所处的科技门类的常规思路，并以现代的方式占有以圆点为基础的视觉语言。这种视觉语言源于该品牌的战略定位，直接反映了Omdia的整合思维以及将技术数据、洞察力和专业知识各个方面联结起来的能力。
+  视觉设计旨在脱离其所处的科技门类的常规思路，并以现代的方式占有以圆点为基础的视觉语言。源于该品牌的战略定位，Omdia的视觉语言直接反映了它的整合思维以及将技术数据、洞察力和专业知识各个方面联结起来的能力。
   <br>
   品牌标准色的基本色是黑与白，以此强调Omdia的权威和自信；充满活力的辅助色可根据需要或场合，提供灵活性和视觉张力。
 </p>
 
 
 <div class="grid1">
-  <img src="/img/omdia/report1.jpg" alt="OMDIA · NORA ZHAO 赵子娴">
-  <img src="/img/omdia/report2.jpg" alt="OMDIA · NORA ZHAO 赵子娴">
-  <img src="/img/omdia/report3.jpg" alt="OMDIA · NORA ZHAO 赵子娴">
-  <img src="/img/omdia/leaflet.jpg" alt="OMDIA · NORA ZHAO 赵子娴">
+  <img src="/img/omdia/report1.jpg" alt="OMDIA REPORT COVER DESIGN · NORA ZHAO 赵子娴">
+  <img src="/img/omdia/report2.jpg" alt="OMDIA REPORT COVER DESIGN · NORA ZHAO 赵子娴">
+  <img src="/img/omdia/report3.jpg" alt="OMDIA REPORT COVER DESIGN · NORA ZHAO 赵子娴">
+  <img src="/img/omdia/leaflet.jpg" alt="OMDIA LEAFLET DESIGN · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
