--- a/project/rtw.html
+++ b/project/rtw.html
@@ -29,7 +29,7 @@
 
 <div class="grid1">
   <video autoplay loop
-    src="/img/rtw/video.mov"
+    src="/img/rtw/cover.mov"
     style="width: 100%;">
     Your browser does not support the video tag.
   </video>
@@ -67,8 +67,8 @@
   <img src="/img/rtw/poster.jpg" alt="RTW POSTERS RTW海报 · NORA ZHAO 赵子娴">
   <img src="/img/rtw/card.jpg" alt="RTW BUSINESS CARDS RTW名片· NORA ZHAO 赵子娴">
   <img src="/img/rtw/tag.jpg" alt="RTW TAG RTW标签 · NORA ZHAO 赵子娴">
-  <img src="/img/rtw/bag.jpg" alt="RTW POSTAL BAG RTW快递袋 · NORA ZHAO 赵子娴">
-  <img src="/img/rtw/shop-bag.jpg" alt="RTW SHOPPING BAG RTW店内购物袋 · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/parcel.jpg" alt="RTW POSTAL BAG RTW快递袋 · NORA ZHAO 赵子娴">
+  <img src="/img/rtw/shopping-bag.jpg" alt="RTW SHOPPING BAG RTW店内购物袋 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
