--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -28,7 +28,7 @@
 <h1 class="zh">书籍和小册子</h1>
 
 <div class="grid1">
-  <img src="/img/machine-translation/0.jpg" alt="Machine Translation by Nora Zhao">
+  <img src="/img/machine-translation/0.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -41,12 +41,12 @@
 <p class="zh indent bodyText">
   这本小册子使用了罗伯特·普鲁奇克（Robert Plutchik）的图表（1980），旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
 <div class="grid2 gridxto1">
-  <img src="/img/emotional-words/1.jpg" alt="Emotional Words by Nora Zhao">
-  <img src="/img/emotional-words/2.jpg" alt="Emotional Words by Nora Zhao">
-  <img src="/img/emotional-words/3.jpg" alt="Emotional Words by Nora Zhao">
-  <img src="/img/emotional-words/4.jpg" alt="Emotional Words by Nora Zhao">
-  <img src="/img/emotional-words/5.jpg" alt="Emotional Words by Nora Zhao">
-  <img src="/img/emotional-words/6.jpg" alt="Emotional Words by Nora Zhao">
+  <img src="/img/emotional-words/1.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
+  <img src="/img/emotional-words/2.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
+  <img src="/img/emotional-words/3.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
+  <img src="/img/emotional-words/4.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
+  <img src="/img/emotional-words/5.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
+  <img src="/img/emotional-words/6.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
 </div>
 
 <h2 class="en indent">Ascent</h2>
@@ -63,12 +63,12 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/ascent/1.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/2.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/3.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/4.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/6.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/5.jpg" alt="ASCENT · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/1.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/2.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/3.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/4.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/6.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/5.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
 </div>
 
 <h2 class="en indent">Machine Translation</h2>
@@ -82,10 +82,10 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/machine-translation/1.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/2.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/3.jpg" alt="Machine Translation by Nora Zhao">
-  <img src="/img/machine-translation/4.jpg" alt="Machine Translation by Nora Zhao">
+  <img src="/img/machine-translation/1.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
+  <img src="/img/machine-translation/2.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
+  <img src="/img/machine-translation/3.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
+  <img src="/img/machine-translation/4.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
 </div>
 
 <h2 class="en indent">The Letter Evolution</h2>
@@ -103,11 +103,11 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/the-letter-evolution/1.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/2.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/3.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/4.jpg" alt="The Letter Evolution by Nora Zhao">
-  <img src="/img/the-letter-evolution/5.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/1.jpg" alt="THE LETTER EVOLUTION BOOKLET 字母演化论手册 · NORA ZHAO 赵子娴">
+  <img src="/img/the-letter-evolution/2.jpg" alt="THE LETTER EVOLUTION BOOKLET 字母演化论手册 · NORA ZHAO 赵子娴">
+  <img src="/img/the-letter-evolution/3.jpg" alt="THE LETTER EVOLUTION BOOKLET 字母演化论手册 · NORA ZHAO 赵子娴">
+  <img src="/img/the-letter-evolution/4.jpg" alt="THE LETTER EVOLUTION BOOKLET 字母演化论手册 · NORA ZHAO 赵子娴">
+  <img src="/img/the-letter-evolution/5.jpg" alt="THE LETTER EVOLUTION BOOKLET 字母演化论手册 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
