--- a/project/byton.html
+++ b/project/byton.html
@@ -28,7 +28,7 @@
 <h1 class="zh">拜腾</h1>
 
 <div class="grid1">
-  <img src="/img/byton/teaser.jpg" alt="BYTON 拜腾 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/cover.jpg" alt="BYTON 拜腾 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -61,17 +61,17 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/byton/poster3-4.jpg" alt="BYTON POSTERS 拜腾海报 · NORA ZHAO 赵子娴">
-  <img src="/img/byton/poster1m.jpg" alt="BYTON POSTER 拜腾海报 · NORA ZHAO 赵子娴">
-  <img src="/img/byton/poster2m.jpg" alt="BYTON POSTER 拜腾海报 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/poster3.jpg" alt="BYTON POSTER DESIGN 拜腾海报设计 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/poster1.jpg" alt="BYTON POSTER DESIGN 拜腾海报设计 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/poster2.jpg" alt="BYTON POSTER DESIGN 拜腾海报设计 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="grid1">
-  <img src="/img/byton/desktop.jpg" alt="BYTON DESKTOP WEBSITE UI 拜腾网站界面 · NORA ZHAO 赵子娴">
-  <img src="/img/byton/ui.jpg" alt="BYTON MOBILE APP UI 拜腾APP界面 · NORA ZHAO 赵子娴">
-  <img src="/img/byton/store2.jpg" alt="BYTON STORE FRONT 拜腾店面门头 · NORA ZHAO 赵子娴">
-  <img src="/img/byton/bag.jpg" alt="BYTON BAGS 拜腾手提袋 · NORA ZHAO 赵子娴">
-  <img src="/img/byton/card.jpg" alt="BYTON BUSINESS CARD 拜腾名片 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/desktop.jpg" alt="BYTON DESKTOP WEBSITE UI DESIGN 拜腾网站界面设计 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/ui.jpg" alt="BYTON MOBILE APP UI DESIGN 拜腾APP界面设计 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/store-front.jpg" alt="BYTON STORE FRONT DESIGN 拜腾店面门头设计 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/bag.jpg" alt="BYTON BAG DESIGN 拜腾手提袋设计 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/card.jpg" alt="BYTON BUSINESS CARD DESIGN 拜腾名片设计 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
