--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -28,7 +28,7 @@
 <h1 class="zh">太平鸟</h1>
 
 <div class="grid1">
-  <img src="/img/peacebird/logo.jpg" alt="PEACEBIRD LOGO 太平鸟品牌标识 · NORA ZHAO 赵子娴">
+  <img src="/img/peacebird/cover.jpg" alt="PEACEBIRD LOGO 太平鸟品牌标识 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -41,7 +41,7 @@
   <br class="listBreak">
   Year: 2019
   <br class="dividerLine">
-  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
+  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive better legibility throughout applications of various sizes (especially on digital screens).
 </p>
 <p class="zh indent bodyText">
   客户：太平鸟
@@ -52,11 +52,11 @@
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
-  在维持衬线字体及其独特视觉特征的前提下，最大限度地简化太平鸟的企业标识，使其能在各种尺寸的电子设备屏幕上清晰显示。
+  在维持衬线字体及其独特视觉特征的前提下，最大限度地简化太平鸟的企业标识，使其能在各种尺寸的应用物上清晰显示（尤其是电子设备屏幕）。
 </p>
 
 <div class="grid1">
-  <img src="/img/peacebird/5.jpg" alt="PEACEBIRD MOBILE TMALL DESIGN 太平鸟天猫界面 · NORA ZHAO 赵子娴">
+  <img src="/img/peacebird/tmall.jpg" alt="PEACEBIRD MOBILE TMALL DESIGN 太平鸟天猫界面 · NORA ZHAO 赵子娴">
   <img src="/img/peacebird/4.jpg" alt="PEACEBIRD POSTERS 太平鸟海报 · NORA ZHAO 赵子娴">
   <img src="/img/peacebird/3.jpg" alt="PEACEBIRD POSTERS 太平鸟海报 · NORA ZHAO 赵子娴">
   <img src="/img/peacebird/1.jpg" alt="PEACEBIRD POSTERS 太平鸟海报 · NORA ZHAO 赵子娴">
