--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -33,11 +33,11 @@
 </main>
 
 <p class="en indent bodyText">
-  I'm Nora, an artist/designer. This website shows a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+  I'm Nora, an artist and designer. This website shows a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
   <br>
   I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   <br>
-  If you are interested, please email me at <u>norazhaodesign@gmail.com</u> for any possible comission or collaboration.
+  If you are interested, please send me an email for inquiry on any possible commission or collaboration.
   <br>
   Email: norazhaodesign@gmail.com
   <br style="margin-bottom: 0;">
